--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_producto_composicion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_producto_composicion.cshtml
@@ -29,14 +29,7 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "pr_descripcion";
-            column.Caption = "Producto";
-            column.Width = Unit.Percentage(60);
-            column.EditFormSettings.Visible = DefaultBoolean.False;
-        });
-
+       
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdProductoHijo";
@@ -46,23 +39,22 @@
             column.EditFormSettings.Visible = DefaultBoolean.True;
             column.SetEditItemTemplateContent(c =>
             {
-                Html.RenderPartial("_CmbProducto_composicion", DataBinder.Eval(c.DataItem, "IdProductoHijo"));
+                Html.RenderPartial("_CmbProducto_composicion", DataBinder.Eval(c.DataItem, "IdProducto"));
             });
         });
-
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "IdUnidadMedida";
-            column.Caption = "Unidad de medida";
-            column.Width = Unit.Percentage(30);
-            column.EditorProperties().ComboBox(p =>
-            {
-                p.TextField = "Descripcion";
-                p.ValueField = "IdUnidadMedida";
-                p.ValueType = typeof(string);
-                p.DataSource = ViewBag.lst_unidad_medida;
-            });
-        });
+         settings.Columns.Add(column =>
+         {
+             column.FieldName = "IdUnidadMedida";
+             column.Caption = "Unidad de medida";
+             column.Width = Unit.Percentage(30);
+             column.EditorProperties().ComboBox(p =>
+             {
+                 p.TextField = "Descripcion";
+                 p.ValueField = "IdUnidadMedida";
+                 p.ValueType = typeof(string);
+                 p.DataSource = ViewBag.lst_unidad_medida;
+             });
+         });
         settings.Columns.Add(column =>
         {
             column.FieldName = "Cantidad";
