--- a/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/_CmbPersona_DebitoBanco.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/_CmbPersona_DebitoBanco.cshtml
@@ -18,8 +18,7 @@
         settings.Properties.Columns.Add("pe_nombreCompleto", "Persona", 80);
         settings.Properties.Columns.Add("IdPersona", "ID Persona", 10);
 
-        settings.Properties.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['IdTipoPersona'] = $('#IdTipo_Persona').val(); }";
-        settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e) {$('#cb_giradoA').val(s.GetText()); vaciar_detalles();}";
+        settings.Properties.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['IdTipo_Persona'] = $('#IdTipo_Persona').val(); }";
     })
     .BindList(new Core.Erp.Web.Areas.Banco.Controllers.NotaDeDebitoBancoController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Banco.Controllers.NotaDeDebitoBancoController().get_info_bajo_demanda)
     .Bind(Model.IdEntidad);
