--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_producto_composicion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_producto_composicion.cshtml
@@ -9,7 +9,7 @@
         settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "Producto", Action = "EditingAddNew" };
         settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "Producto", Action = "EditingUpdate" };
         settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "Producto", Action = "EditingDelete" };
-        settings.SettingsEditing.Mode = GridViewEditingMode.Inline;
+        settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
         settings.SettingsBehavior.ConfirmDelete = true;
 
         settings.CommandColumn.Visible = true;
@@ -29,7 +29,20 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-       
+        settings.InitNewRow = (s, e) =>
+        {
+            e.NewValues["IdProductoHijo"] = 0;
+            e.NewValues["IdUnidadMedida"] = null;
+            e.NewValues["Cantidad"] = 0;
+        };
+
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pr_descripcion";
+            column.Caption = "Producto";
+            column.Width = Unit.Percentage(60);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdProductoHijo";
@@ -39,7 +52,7 @@
             column.EditFormSettings.Visible = DefaultBoolean.True;
             column.SetEditItemTemplateContent(c =>
             {
-                Html.RenderPartial("_CmbProducto_composicion", DataBinder.Eval(c.DataItem, "IdProducto"));
+                Html.RenderPartial("_CmbProducto_composicion", DataBinder.Eval(c.DataItem, "IdProductoHijo"));
             });
         });
          settings.Columns.Add(column =>
