--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
@@ -37,54 +37,10 @@
     </div>
     <div class="row">
         <div class="col-md-7">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="col-md-12">
-                        <div class="form-group">
-                            <label for="IdProducto_padre">Producto padre</label>
-                            @Html.DevExpress().ComboBoxFor(q => q.IdProducto_padre, settings =>
-                       {
-                           settings.Name = "IdProducto_padre";
-                           settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                           settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                           settings.Properties.Columns.Add("IdProducto", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                           settings.Properties.Columns.Add("pr_descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(90);
-                           //Campo ID
-                           settings.Properties.ValueField = "IdProducto";
-                           settings.Properties.ValueType = typeof(decimal);
-                           //Boton para seleccionar ningun registro
-                           settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                           settings.Properties.NullText = "== Seleccione ==";
-                           settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                           settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e,){get_info_padre()}";
-                       }).BindList(ViewBag.lst_producto_padre).GetHtml()
-                            @Html.ValidationMessageFor(q => q.IdProducto_padre, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </div>                
-            </div>
-
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="col-md-12">
-                        <div class="form-group">
-                            <label for="pr_descripcion">Descripción*</label>
-                            @Html.TextBoxFor(q => q.pr_descripcion, new { @class = "form-control", @id = "pr_descripcion" })
-                            @Html.ValidationMessageFor(q => q.pr_descripcion, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="col-md-12">
-                        <div class="form-group">
-                            <label for="pr_descripcion_2">Descripción 2</label>
-                            @Html.TextBoxFor(q => q.pr_descripcion_2, new { @class = "form-control", @id = "pr_descripcion_2" })
-                            @Html.ValidationMessageFor(q => q.pr_descripcion_2, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </div>
+            <div class="form-group">
+                <label for="IdCliente">Cliente*</label>
+                @Html.Partial("_CmbCliente_Cobranza", Model)
+                @Html.ValidationMessageFor(q => q.IdProducto_padre, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="col-md-4">
