--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_CmbProducto_padre.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_CmbProducto_padre.cshtml
@@ -2,11 +2,11 @@
 @{
     var comboBox = Html.DevExpress().ComboBox(settings =>
     {
-        settings.Name = "IdProducto";
+        settings.Name = "IdProducto_padre";
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "Producto", Action = "CmbProducto_composicion", Area = "Inventario" };
+        settings.CallbackRouteValues = new { Controller = "Producto", Action = "CmbProducto_padre", Area = "Inventario" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pr_descripcion";
@@ -18,7 +18,7 @@
         settings.Properties.Columns.Add("pr_descripcion", "Producto", 90);
     })
     .BindList(new Core.Erp.Web.Areas.Inventario.Controllers.ProductoController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Inventario.Controllers.ProductoController().get_info_bajo_demanda)
-    .Bind(Model.IdEntidad);
+    .Bind(Model.IdProducto);
 
 }
 @comboBox.GetHtml()
