--- a/ERP/Core.Erp.Web/Areas/General/Views/ReportesPorUsuario/_GridViewPartial_ReportesPorAsignar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/ReportesPorUsuario/_GridViewPartial_ReportesPorAsignar.cshtml
@@ -6,6 +6,10 @@
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "CodReporte";
 
+        //Configuracion cabecera
+        settings.Settings.ShowTitlePanel = true;
+        settings.SettingsText.Title = "Por asignar";
+
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
         settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
