--- a/ERP/Core.Erp.Web/Areas/General/Views/ReportesPorUsuario/_GridViewPartial_ReportesPorUsuario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/ReportesPorUsuario/_GridViewPartial_ReportesPorUsuario.cshtml
@@ -2,10 +2,14 @@
 
 @{
     var grid = Html.DevExpress().GridView(settings => {
-        settings.Name = "GridView_reporte";
-        settings.CallbackRouteValues = new { Controller = "Reporte", Action = "GridViewPartial_reporte" };
+        settings.Name = "GridView_ReportesPorUsuario";
+        settings.CallbackRouteValues = new { Controller = "ReportesPorUsuario", Action = "GridViewPartial_reportesPorUsuario" };
         settings.KeyFieldName = "CodReporte";
         settings.Width = Unit.Percentage(100);
+
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
 
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
@@ -44,37 +48,16 @@
             if (e.RowType == GridViewRowType.Data && e.VisibleIndex % 2 == 0)
                 e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
         };
-        settings.Columns.Add(c =>
-        {
-            c.Caption = "#";
-            c.SetDataItemTemplateContent(tc =>
-            {
-                ViewContext.Writer.Write(
-            Html.ActionLink("Modificar", "Modificar", new { CodReporte = DataBinder.Eval(tc.DataItem, "CodReporte") })
-                );
-            });
-            c.SetHeaderTemplateContent(tc =>
-            {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
-                );
-            });
-            c.Settings.AllowDragDrop = DefaultBoolean.False;
-            c.Settings.AllowSort = DefaultBoolean.False;
-            c.Width = Unit.Pixel(150);
-        });
-
-        settings.Columns.Add("CodReporte", "Código").Width = Unit.Percentage(10);
-        settings.Columns.Add("nom_reporte", "Nombre").Width = Unit.Percentage(60);
-        settings.Columns.Add("estado", "Estado").Width = Unit.Percentage(10);
-        settings.Columns.Add("orden", "Orden").Width = Unit.Percentage(10);
+        settings.Columns.Add("CodReporte", "Código").Width = Unit.Percentage(20);
+        settings.Columns.Add("nom_reporte", "Nombre").Width = Unit.Percentage(40);
+        settings.Columns.Add("observacion", "Observación").Width = Unit.Percentage(35);
         settings.Columns.Add(column =>
         {
             column.SetDataItemTemplateContent(c =>
             {
                 ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('"+Url.Action(DataBinder.Eval(c.DataItem, "mvc_accion").ToString(), DataBinder.Eval(c.DataItem, "mvc_controlador").ToString(), new { Area = DataBinder.Eval(c.DataItem, "mvc_area").ToString() }, Request.Url.Scheme)+"');\"></span>");
             });
-            column.Width = Unit.Percentage(10);
+            column.Width = Unit.Percentage(5);
         });
     });
 }
