--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_001.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_001.cshtml
@@ -113,7 +113,7 @@
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="IdSucursal">Sucursal</label>
-                    @Html.DropDownListFor(q=>q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucusarl", "Su_descripcion"), new { @class="form-control"})
+                    @Html.DropDownListFor(q=>q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_Descripcion"), new { @class="form-control"})
                     @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
             </div>
