--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorPagarReportes/CXP_008.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorPagarReportes/CXP_008.cshtml
@@ -31,7 +31,7 @@
                 <div class="col-md-12">
                     <div class="col-md-4">
                         <div class="form-group">
-                            <label for="IdProveedor">Cliente</label>
+                            <label for="IdProveedor">Proveedor</label>
                             @Html.Partial("_CmbProveedor_CXP", Model)
                             @Html.ValidationMessageFor(q => q.IdProveedor, "", new { @class = "text-danger" })
                         </div>
