--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/CategoriaAF/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/CategoriaAF/Nuevo.cshtml
@@ -15,7 +15,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdActivoFijoTipo">Tipo catálogo*</label>
+                    <label for="IdActivoFijoTipo">Tipo activo*</label>
                     @Html.HiddenFor(q => q.IdActivoFijoTipo)
                     @Html.DevExpress().ComboBoxFor(q => q.IdActivoFijoTipo, settings =>
                {
