--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/ActivoFijoReportes/ACTF_004.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/ActivoFijoReportes/ACTF_004.cshtml
@@ -1,7 +1,119 @@
 ﻿
+@model Core.Erp.Info.Helps.cl_filtros_Info
 @{
+    Layout = "~/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml";
     ViewBag.Title = "ACTF_004";
+    if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
+    {
+        Response.Redirect("~/Account/Login");
+    }
 }
+@using (Html.BeginForm("ACTF_004", "ActivofijoReportes", FormMethod.Post, new { @class = "form", @role = "form" }))
+{
+    <div class="box collapsed-box">
+        <div class="box-header with-border">
+            <div class="row">
+                <div class="col-md-12">
+                    <button type="submit" class="btn btn-primary">Aplicar filtros</button>
+                </div>
+            </div>
+            <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                    <i class="fa fa-plus"></i>
+                </button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                    <i class="fa fa-times"></i>
+                </button>
+            </div>
+        </div>
+        <div class="box-body">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="IdActijoFijoTipo">Tipo activo*</label>
+                            @Html.DropDownListFor(q => q.IdActivoFijoTipo, new SelectList(ViewBag.lst_activo, "IdActivoFijoTipo", "Af_Descripcion"), new { @class = "form-control", @id = "IdActivoFijoTipo" })
+                            @Html.ValidationMessageFor(q => q.IdActivoFijoTipo, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="IdCategoriaAF">Categoría*</label>
+                            @Html.DropDownListFor(q => q.IdCategoriaAF, new SelectList(ViewBag.lst_categoria, "IdCategoriaAF", "Descripcion"), new { @class = "form-control", @id = "IdCategoriaAF" })
+                            @Html.ValidationMessageFor(q => q.IdCategoriaAF, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="Estado_Proceso">Estado proceso</label>
+                            @Html.DropDownListFor(q => q.Estado_Proceso, new SelectList(ViewBag.lst_estado, "IdCatalogo", "Descripcion"), new { @class = "form-control" })
+                            @Html.ValidationMessageFor(q => q.Estado_Proceso, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="">fecha corte</label>
+                            <div class="input-group date">
+                                <div class="input-group-addon">
+                                    <i class="fa fa-calendar"></i>
+                                </div>
+                                @Html.TextBoxFor(q => q.fechaCorte, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fechaCorte" })
+                                @Html.ValidationMessageFor(q => q.fechaCorte, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <div class="checkbox">
+                                <label for="mostrar_agrupado">@Html.CheckBoxFor(q => q.mostrar_detallado) Mostrar detallado</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- /.box-body -->
+        </div>
+                    </div>
+                    <div class="box">
+                        <div class="box-header with-border">
+                            <h3 class="box-title">@ViewBag.Title</h3>
+                            <div class="box-tools pull-right">
+                                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                                    <i class="fa fa-minus"></i>
+                                </button>
+                                <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                                    <i class="fa fa-times"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="box-body">
+                            @Html.DevExpress().WebDocumentViewer(settings =>
+                       {
+                           settings.MobileMode = false;
+                           settings.Name = "webDocumentViewer";
+                       }).Bind(ViewBag.Report).GetHtml();
+                        </div>
+                        <!-- /.box-body -->
+                        <div class="box-footer">
+                            [@Session["IdEmpresa"]] @Session["nom_empresa"]
+                        </div>
+                        <!-- /.box-footer-->
+                    </div>
+                    }
+                    <script>
+                        $(function () {
+                            //Date picker
+                            $('#fechaCorte').datepicker({
+                                autoclose: true
+                            })
 
-<h2>ACTF_004</h2>
-
+                        });
+                    </script>
